HTML e CSS pre concluido

--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
     <title>Cupcake de café com chantilly</title>
 </head>
 <body>
     
     <div id="page">
-        <img src="images/background.png" alt="imagem de fundo Cupcake" class="background">
-    </div>
-    <main>
-        <section id="about">
+        <img src="images/main-image.jpg" alt="imagem logo Cupcake" class="head">
+    
+        <main>
+            <section id="about">
             <h1>Cupcake de Café com chantilly</h1>
             <p>
                 O bolinho perfeito para acompanhar o café de todos os dias. É muito fácil e ainda por cima fica maravilhoso, com certeza vai impressionar. Faz e depois me conta o que achou!
@@ -21,8 +25,8 @@
                 Rendimento: 12 porções <br> 
                 Dificuldade: fácil
             </p>
-        </section>
-        <section id="ingredients">
+            </section>
+            <section id="ingredients">
             <h2>Ingredientes</h2>
             <ul>
                 <li>1 e 1/2 xícara (chá) de água morna</li> 
@@ -40,8 +44,8 @@
                 <li>1 colher (sopa) de chocolate em pó</li> 
                 <li>2 colheres (sopa) de manteiga</li> 
             </ul>
-        </section>
-        <section id="preparation">
+            </section>
+            <section id="preparation">
             <h2>Modo de preparo</h2>
             <p>
                 No liquidificador, bata a água, o café solúvel, os ovos, o óleo, o açúcar e o chocolate em pó até ficar homogêneo. Transfira para uma tigela, adicione a farinha e o fermento e misture com uma colher. Despeje em forminhas para cupcakes forradas com forminhas de papel e coloque em uma fôrma grande, um ao lado do outro. Leve ao forno médio, preaquecido, por 25 minutos ou até assar e dourar. Retire e deixe esfriar.   
@@ -52,8 +56,9 @@
             <p>
                 Para a montagem, faça um furo no centro dos cupcakes e recheie com o brigadeiro de café reservado. Decore as superfícies dos cupcakes com o chantilly reservado, fazendo círculos. Decore com grãos de café e leve à geladeira até o momento de servir.
             </p>
-        </section>
-    </main>
-    <footer></footer>
+            </section>
+        </main>
+        <footer></footer>
+    </div>
 </body>
 </html>
