--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             </p>
             </section>
         </main>
-        <footer></footer>
+        
     </div>
+    <footer>Feito com <img src="images/ph_heart-fill.svg" alt="coracao"> por Conter</footer>
 </body>
 </html>
